--- a/package.json
+++ b/package.json
@@ -15,5 +15,17 @@
     "mysql": "~2.0.0-alpha9",
     "orm": "~2.1.3",
     "request": "^2.51.0"
+  },
+  "keywords": [
+    "node.js",
+    "express",
+    "sql",
+    "google API",
+    "angular"
+  ],
+  "author": {
+    "name": "gaurav gupta",
+    "email": "gaurav_bng@hotmail.com",
+    "website": "www.cronj.com"
   }
 }
